grammar/SyntaxChecker.java
/* Generated By:JavaCC: Do not edit this line. SyntaxChecker.java */
package sintaxAnalysis;

import java.io.*;
import java.util.ArrayList;

public class SyntaxChecker implements SyntaxCheckerConstants {

        private static int sameLineDCL = 0;
        private static int mainDefinido = 0;
        private static int scope = 0;
        private static int numeroVariable = 0;
        private static int inMain = 0;
        private static Boolean addVarFalg = true;
        private static String indiceAcceso = "";
        private static ArrayList<String> valoresIgualdadTabla;
        private static String nombreArchivo = "D:/proyects/cuboLEDJCC/src/sintaxAnalysis/eje.txt";
        private static TablaVariables tablaVariables = new TablaVariables();
        public static ArrayList<String> constantesConfig = new ArrayList<String>();

    public static void main(String[] args) {
        try {
                        File file = new File(nombreArchivo);
                        BufferedReader br = new BufferedReader(new FileReader(file));
                        String st;
                        String in = "";
                        while ((st = br.readLine()) != null) {
                                in += st;
                                in += '\u005cn';
                        }
                        System.out.println(in);
            new SyntaxChecker(new java.io.StringReader(in)).INICIAR();
            System.out.println("Syntax is okay");
                        tablaVariables.imprimirIDS();
        } catch (Throwable e) {
            // Catching Throwable is ugly but JavaCC throws Error objects!
            System.out.println("Syntax check failed: " + e.getMessage());
        }
    }

        static void checkMainDefined(int llamada){
                if (mainDefinido == 0){
                        if (llamada ==  1){
                                System.out.println("Main method not defined");
                                ParseException e = generateParseException();
                                System.out.println(e.toString());
                        } else {
                                mainDefinido = 1;
                        }
                } else {
                        System.out.println("Main method already defined");
                        ParseException e = generateParseException();
                        System.out.println(e.toString());
                }
        }

        static void checkMainDCL() {
                if (inMain == 1){
                        System.out.println("Illegal declaration in main method");
                        ParseException e = generateParseException();
                        System.out.println(e.toString());
                }
        }

        static void agregarVariable() {
                if (addVarFalg) {
                        tablaVariables.agregarIndiceAcceso(indiceAcceso);
                }
        }

        static void checkSameLineDCL() {
                if (sameLineDCL != 0) {
                        System.out.println("Expected same number of expresions as ids in same line declaration");
                        ParseException e = generateParseException();
                        System.out.println(e.toString());
                }
        }

  static final public void INICIAR() throws ParseException {
    Constantes();
    S();
  }

  static final public void S() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 33:
    case ID:
      Sder();
      break;
    case 0:
      jj_consume_token(0);
      break;
    default:
      jj_la1[0] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void Sder() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ID:
      Inicial();
      S();
      break;
    case 33:
      Procedure();
      S();
      break;
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void Exp() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 32:
      Call();
      Exp();
      break;
    case ID:
      Inicial();
      Exp();
      break;
    case 31:
      forFunction();
      Exp();
      break;
    case 30:
      ifFunction();
      Exp();
      break;
    case 34:
      Delay_Function();
      Exp();
      break;
    case 37:
      Blink_Function();
      Exp();
      break;
    default:
      jj_la1[2] = jj_gen;
      Empty();
    }
  }

  static final public void Inicial() throws ParseException {
                 Token op;
    Identificadores();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 12:
      jj_consume_token(12);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INSERT:
      case DELETE:
        OperacionesListas();
        break;
      case NEG:
      case T:
      case F:
        FuncionesListas();
        break;
      default:
        jj_la1[3] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
    case 9:
      jj_consume_token(9);
                                                                                                       checkMainDCL();
      Igualdad();
      break;
    default:
      jj_la1[4] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(43);
                                                                                                                                           checkSameLineDCL();
  }

  static final public void Identificadores() throws ParseException {
                         Token id;
    id = jj_consume_token(ID);
                                                                                                tablaVariables.agregarVariable(numeroVariable,id.image,scope);
                                                                                                numeroVariable++;
    IdentificadoresAux();
  }

  static final public void IdentificadoresAux() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 8:
      jj_consume_token(8);
                                    sameLineDCL += 1;
      Identificadores();
      break;
    default:
      jj_la1[5] = jj_gen;
                                                                            addVarFalg = true;
      Listas();
                                                                                                          indiceAcceso = "";
    }
  }

  static final public void IgualdadValoresOperables() throws ParseException {
                                  Token aux;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ID:
      aux = jj_consume_token(ID);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case OPERADORES:
        jj_consume_token(OPERADORES);
                                                                         valoresIgualdadTabla.add(aux.image);
        IgualdadAux();
        break;
      case 12:
        jj_consume_token(12);
                                                                                                                                                       indiceAcceso += aux.image; indiceAcceso += ".";
        FuncionesShape();
                                                                                                                                                                                                                          valoresIgualdadTabla.add(indiceAcceso); indiceAcceso = "";
        break;
      default:
        jj_la1[6] = jj_gen;
                                                                                                                                                   indiceAcceso+= aux.image; addVarFalg = false;
        Listas();
                                                                                                                                                                                                            valoresIgualdadTabla.add(indiceAcceso); indiceAcceso = ""; addVarFalg = true;
      }
      break;
    case NUM:
      jj_consume_token(NUM);
                                                                 valoresIgualdadTabla.add("NUM");
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case OPERADORES:
        jj_consume_token(OPERADORES);
        IgualdadValoresOperables();
        break;
      default:
        jj_la1[7] = jj_gen;
        Empty();
      }
      break;
    case 6:
      jj_consume_token(6);
      IgualdadAux();
      jj_consume_token(7);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case OPERADORES:
        jj_consume_token(OPERADORES);
        IgualdadValoresOperables();
        break;
      default:
        jj_la1[8] = jj_gen;
        IgualdadValoresOperables();
      }
      break;
    default:
      jj_la1[9] = jj_gen;
      Empty();
    }
  }

  static final public void IgualdadAux() throws ParseException {
                     Token aux;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case BOOL:
      aux = jj_consume_token(BOOL);
                                                  valoresIgualdadTabla.add(aux.image);
      break;
    case 6:
      jj_consume_token(6);
      IgualdadValoresOperables();
      jj_consume_token(7);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case OPERADORES:
        jj_consume_token(OPERADORES);
        IgualdadValoresOperables();
        break;
      default:
        jj_la1[10] = jj_gen;
        IgualdadValoresOperables();
      }
      break;
    case 44:
      jj_consume_token(44);
                                                                               addVarFalg = false; indiceAcceso+="[";
      ValoresListas();
      jj_consume_token(45);
                                                                                                                                            indiceAcceso+="]"; valoresIgualdadTabla.add(indiceAcceso); indiceAcceso = ""; addVarFalg = true;
      break;
    case LIST:
      jj_consume_token(LIST);
                                                                                  addVarFalg = false;
      CrearLista();
      Listas();
                                                                                                                              addVarFalg = true;
      break;
    case LENGTH:
      FuncionLen();
      break;
    default:
      jj_la1[11] = jj_gen;
      IgualdadValoresOperables();
    }
  }

  static final public void Igualdad() throws ParseException {
                  Token aux;
                                 valoresIgualdadTabla = new ArrayList<String>();
    IgualdadAux();
                                                                                                 tablaVariables.agregarIgualdad(numeroVariable-sameLineDCL,scope,valoresIgualdadTabla);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 8:
      jj_consume_token(8);
                                                                      sameLineDCL -= 1;
      Igualdad();
      break;
    default:
      jj_la1[12] = jj_gen;
      Empty();
    }
  }

  static final public void Listas() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 44:
      jj_consume_token(44);
                         indiceAcceso += "[";
      AccesoLista();
      jj_consume_token(45);
                                                                  indiceAcceso += "]";
      Listas();
                                                                                                  agregarVariable();
      break;
    case LIST:
      jj_consume_token(LIST);
      CrearLista();
      Listas();
      break;
    default:
      jj_la1[13] = jj_gen;
      Empty();
    }
  }

  static final public void AccesoLista() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 46:
      jj_consume_token(46);
      jj_consume_token(8);
                                                         indiceAcceso += ":,";
      Numeros();
      break;
    case NUM:
    case LENGTH:
    case ID:
      Numeros();
      AccesoListaAux();
      break;
    default:
      jj_la1[14] = jj_gen;
      ValoresListas();
    }
  }

  static final public void AccesoListaAux() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 46:
      jj_consume_token(46);
                                 indiceAcceso+=":";
      Numeros();
      break;
    case 8:
      jj_consume_token(8);
                                                                      indiceAcceso+=",";
      Numeros();
      break;
    case NUM:
    case LENGTH:
    case ID:
      Numeros();
      break;
    default:
      jj_la1[15] = jj_gen;
      Empty();
    }
  }

  static final public void ValoresListas() throws ParseException {
                       Token aux;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case BOOL:
      aux = jj_consume_token(BOOL);
                                                   indiceAcceso+=aux.image;
      ValoresListasAux();
      break;
    default:
      jj_la1[16] = jj_gen;
      Listas();
      ValoresListasAux();
    }
  }

  static final public void ValoresListasAux() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 8:
      jj_consume_token(8);
                                    indiceAcceso+=",";
      ValoresListas();
      break;
    default:
      jj_la1[17] = jj_gen;
      Empty();
    }
  }

  static final public void FuncionesListas() throws ParseException {
                         Token aux;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NEG:
      aux = jj_consume_token(NEG);
      break;
    case T:
      aux = jj_consume_token(T);
      break;
    case F:
      aux = jj_consume_token(F);
      break;
    default:
      jj_la1[18] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
                                                                             tablaVariables.agregarIgualdad(numeroVariable,scope,aux.image);
  }

  static final public void CrearLista() throws ParseException {
                    Token aux;
    jj_consume_token(6);
    aux = jj_consume_token(RANGO);
    jj_consume_token(6);
                                                         System.out.println(aux);
    RangeParam();
  }

  static final public void RangeParam() throws ParseException {
                    Token n;
    Numeros();
    RangeParamVal();
  }

  static final public void RangeParamVal() throws ParseException {
                       Token val;
    jj_consume_token(8);
    val = jj_consume_token(BOOL);
                                                       System.out.println(val.image);
    jj_consume_token(7);
    jj_consume_token(7);
  }

  static final public void OperacionesListas() throws ParseException {
                           Token aux;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INSERT:
      aux = jj_consume_token(INSERT);
                                                         addVarFalg = false; valoresIgualdadTabla = new ArrayList<String>(); valoresIgualdadTabla.add(aux.image);
      jj_consume_token(6);
      valoresInsert();
      jj_consume_token(7);
                                                                                                                                                                                            tablaVariables.agregarIgualdad(numeroVariable,scope,valoresIgualdadTabla); addVarFalg = true;
      break;
    case DELETE:
      aux = jj_consume_token(DELETE);
                                                                                                  addVarFalg = false; valoresIgualdadTabla = new ArrayList<String>(); valoresIgualdadTabla.add(aux.image);
      jj_consume_token(6);
      valoresDel();
      jj_consume_token(7);
                                                                                                                                                                                                                                  tablaVariables.agregarIgualdad(numeroVariable,scope,valoresIgualdadTabla); addVarFalg = true;
      break;
    default:
      jj_la1[19] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void valoresInsert() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 8:
    case LIST:
    case 44:
                                                         indiceAcceso = ""; valoresIgualdadTabla.add("InsertMatriz");
      Listas();
                                                                                                                                 valoresIgualdadTabla.add(indiceAcceso);
      InsertMatriz();
      break;
    case NUM:
    case LENGTH:
    case ID:
                                                                                                                                                                                            valoresIgualdadTabla.add("InsertListas");
      InsertListas();
      break;
    default:
      jj_la1[20] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void InsertMatriz() throws ParseException {
    jj_consume_token(8);
                               indiceAcceso = "";
    Numeros();
                                                              valoresIgualdadTabla.add(indiceAcceso); indiceAcceso = "";
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 8:
      jj_consume_token(8);
      Numeros();
                                                                                                                                          valoresIgualdadTabla.add(indiceAcceso); indiceAcceso = "";
      break;
    default:
      jj_la1[21] = jj_gen;
      Empty();
    }
  }

  static final public void valoresDel() throws ParseException {
    Numeros();
                                  valoresIgualdadTabla.add(indiceAcceso); indiceAcceso = "";
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 8:
      jj_consume_token(8);
      Numeros();
                                                                                                              valoresIgualdadTabla.add(indiceAcceso); indiceAcceso = "";
      break;
    default:
      jj_la1[22] = jj_gen;
      Empty();
    }
  }

  static final public void InsertListas() throws ParseException {
                      Token val;
                                     indiceAcceso = "";
    Numeros();
                                                                    valoresIgualdadTabla.add(indiceAcceso); indiceAcceso = "";
    jj_consume_token(8);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case BOOL:
      val = jj_consume_token(BOOL);
                                                                                       valoresIgualdadTabla.add(val.image);
      break;
    default:
      jj_la1[23] = jj_gen;
      Listas();
                                                                                    valoresIgualdadTabla.add(indiceAcceso); indiceAcceso = "";
    }
  }

  static final public void Numeros() throws ParseException {
                 Token index;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NUM:
      index = jj_consume_token(NUM);
                                                                               indiceAcceso += index.image;
      break;
    case ID:
      index = jj_consume_token(ID);
                                                                                indiceAcceso += index.image;
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 12:
        jj_consume_token(12);
                                                                                                                    indiceAcceso+= ".";
        FuncionesShape();
        break;
      default:
        jj_la1[24] = jj_gen;
        Empty();
      }
      break;
    case LENGTH:
      FuncionLen();
      break;
    default:
      jj_la1[25] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void FuncionesShape() throws ParseException {
                        Token aux;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SHAPEC:
      aux = jj_consume_token(SHAPEC);
      break;
    case SHAPEF:
      aux = jj_consume_token(SHAPEF);
      break;
    default:
      jj_la1[26] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
                                                                         indiceAcceso += aux.image;
  }

  static final public void FuncionLen() throws ParseException {
                    Token aux;
    aux = jj_consume_token(LENGTH);
                                                  indiceAcceso+=aux.image;
    jj_consume_token(6);
    aux = jj_consume_token(ID);
                                                                                            indiceAcceso+=";"; indiceAcceso+=aux.image; indiceAcceso+=";";
    Listas();
    jj_consume_token(7);
                                                                                                                                                                          indiceAcceso = "";
  }

  static final public void Iterable() throws ParseException {
                 Token aux;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ID:
      aux = jj_consume_token(ID);
                                          System.out.println(aux.image);
      Iterable_Aux();
      break;
    case NUM:
      jj_consume_token(NUM);
      break;
    case LENGTH:
      FuncionLen();
      break;
    default:
      jj_la1[27] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void Iterable_Aux() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 44:
      jj_consume_token(44);
                               System.out.print("[");
      Adentro_Lista();
      jj_consume_token(45);
                                                                              System.out.print("]");
      Iterable_Aux();
      break;
    case 12:
      jj_consume_token(12);
      FuncionesShape();
      break;
    default:
      jj_la1[28] = jj_gen;
      Empty();
    }
  }

  static final public void ifFunction() throws ParseException {
                    Token aux;
    aux = jj_consume_token(30);
                                              System.out.println(aux);
    Iterable();
    aux = jj_consume_token(OPERADOR_COMPARADOR);
                                                                                                                System.out.println(aux);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case BOOL:
      aux = jj_consume_token(BOOL);
                                                                               System.out.println(aux);
      break;
    case NUM:
    case LENGTH:
    case ID:
      Iterable();
      break;
    default:
      jj_la1[29] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(10);
    Exp();
    jj_consume_token(11);
  }

  static final public void Constantes() throws ParseException {
    Timer();
    Rango_Timer();
    Dim_Filas();
    Dim_Columnas();
    Cubo();
  }

  static final public void Timer() throws ParseException {
               Token n;
    jj_consume_token(TIMER);
    jj_consume_token(9);
    n = jj_consume_token(NUM);
    jj_consume_token(43);
                                                     constantesConfig.add(n.image);
  }

  static final public void Rango_Timer() throws ParseException {
                     Token rango;
    jj_consume_token(RANGO_TIMER);
    jj_consume_token(9);
    rango = jj_consume_token(OPCIONESRANGO);
    jj_consume_token(43);
                                                                                    constantesConfig.add(rango.image);
  }

  static final public void Dim_Filas() throws ParseException {
                   Token filas;
    jj_consume_token(DIM_FILAS);
    jj_consume_token(9);
    filas = jj_consume_token(NUM);
    jj_consume_token(43);
                                                                      constantesConfig.add(filas.image);
  }

  static final public void Dim_Columnas() throws ParseException {
                      Token columnas;
    jj_consume_token(DIM_COLUMNAS);
    jj_consume_token(9);
    columnas = jj_consume_token(NUM);
    jj_consume_token(43);
                                                                                  constantesConfig.add(columnas.image);
  }

  static final public void Cubo() throws ParseException {
              Token i; Token j;
    jj_consume_token(CUBO);
    jj_consume_token(9);
    i = jj_consume_token(NUM);
    jj_consume_token(8);
    j = jj_consume_token(NUM);
    jj_consume_token(43);
                                                                           constantesConfig.add(i.image); constantesConfig.add(j.image);
  }

  static final public void Empty() throws ParseException {

  }

  static final public void Delay_Function() throws ParseException {
                              System.out.println("Delay");
    jj_consume_token(34);
    jj_consume_token(6);
    Delay_Expression();
    jj_consume_token(7);
    jj_consume_token(43);
  }

  static final public void Delay_Expression() throws ParseException {
                          Token num; Token range;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NUM:
      num = jj_consume_token(NUM);
      jj_consume_token(8);
      range = jj_consume_token(OPCIONESRANGO);
      break;
    default:
      jj_la1[30] = jj_gen;
      Empty();
    }
  }

  static final public void Blink_Function() throws ParseException {
                             System.out.println("Blink");
    jj_consume_token(37);
    jj_consume_token(6);
                                                                           System.out.println("(");
    Blink_Expression();
    jj_consume_token(7);
                                                                                                                               System.out.println(")");
    jj_consume_token(43);
  }

  static final public void Blink_Expression() throws ParseException {
                          Token id; Token bool;
    id = jj_consume_token(ID);
                                                            System.out.println(id);
    jj_consume_token(44);
                                                                                            System.out.println("[");
    Adentro_Lista();
    jj_consume_token(45);
                                                                                                                                             System.out.println("]");
    jj_consume_token(8);
                                                                                                                                                                              System.out.println(",");
    Blink_Expression_Aux();
  }

  static final public void Blink_Expression_Aux() throws ParseException {
                              Token bool; Token num;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NUM:
      num = jj_consume_token(NUM);
                                                                  System.out.println(num);
      Blink_Expression_Aux1();
      break;
    case BOOL:
      bool = jj_consume_token(BOOL);
                                                                                                                                     System.out.println(bool);
      break;
    default:
      jj_la1[31] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void Blink_Expression_Aux1() throws ParseException {
                               Token range; Token bool;
    jj_consume_token(8);
                                                               System.out.println(",");
    range = jj_consume_token(OPCIONESRANGO);
